# QuadrupedRl

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
assets/quadruped/: ant.urdf  plane.urdf
configs/: ppo_ant_fast.yaml
envs/: ant_env.py
scripts/: __init__.py  make_coverage_badge.py
tests/unit/: conftest.py  test_ant_env.py  test_badge.py  test_make_coverage_badge_script.py
